# novastream-test

./: .gitignore  ANIME-PROVIDER-PLAN.MD  ANIME-ROUTING-PERF-PLAN.md  API-CLEANUP-ADOPTION.MD  CASTING_CHECKLIST.md  CLAUDE.md  Feature-Updates.md  MAC_CHECKLIST.md  NOVA_STREAM_ANALYSIS.md  NOVA_STREAM_ANALYSIS.md.bak  PERFORMANCE_CHECKLIST.md  README.md  UPGRADE-FIX-PLAN.MD  USER_DATA_SYNC_CHECKLIST.md  WATCHPARTY_CHECKLIST.md  download_offline.md  index.html  package-lock.json  package.json  release.ps1  release.ps2  vite.config.js
.claude/: settings.local.json
docs/: casting-phase-a-audit.md  casting-phase-f-validation.md  (+9 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: apply-update.toml  cancel-video-download.toml  capture-stream.toml  clear-cast-relay.toml  complete-resolver-eval.toml  connect-cast-device.toml  create-watch-party-token.toml  delete-video-download.toml  disconnect-cast-device.toml  discover-cast-devices.toml  download-update.toml  fetch-anime-json.toml  fetch-anime-text-with-session.toml  fetch-ann-feed.toml  fetch-movie-subtitles.toml  fetch-movie-text.toml  fetch-og-image.toml  find-local-subtitle-sidecar.toml  get-cast-relay-status.toml  get-cast-session-status.toml  get-download-location.toml  get-downloads-storage-info.toml  get-local-file-metadata.toml  get-runtime-environment.toml  get-watch-party-transport-config.toml  pause-video-download.toml  prepare-cast-media.toml  read-local-text-file.toml  register-media-proxy-file.toml  register-media-proxy-stream.toml  reset-download-location.toml  resolver-session-eval.toml  scan-download-library.toml  set-download-location.toml  set-player-fullscreen.toml  set-topmost-state.toml  set-video-download-max-concurrent.toml  start-video-download.toml
src-tauri/src/: main.rs
(+108 files in other folders)
