[package]
name = "nova-stream"
version = "1.1.4"
description = "NOVA STREAM - Premium Streaming Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "cookies"] }
tokio = { version = "1", features = ["fs", "time", "net"] }
futures-util = "0.3"
axum = { version = "0.7", features = ["http1", "http2"] }
tower-http = { version = "0.5", features = ["cors"] }
percent-encoding = "2.3"
url = "2.5"
