[package]
name = "nova-stream"
version = "1.4.2"
description = "NOVA STREAM - Premium Streaming Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
walkdir = "2"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
regex = "1"
base64 = "0.22"
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
http = "1"
urlencoding = "2.1"
dirs = "5"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
